# govern

./: .gitattributes  .gitignore  .govern.toml  .markdownlint-cli2.jsonc  .mcp.json  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  constitution.md  install.sh  sdd-context.md  security-backend.md
.githooks/: pre-commit
runtime/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  bacon.toml  legacy-prose-commands.txt  rust-toolchain.toml
runtime/src/: host.rs  io.rs  lib.rs  main.rs
runtime/src/interpreter/: mod.rs  payload.rs
runtime/src/mcp/: mod.rs  server.rs
runtime/src/parser/: mod.rs
runtime/src/primitives/: append_inbox.rs  append_question.rs  append_task.rs  apply_manifest.rs  check_artifacts.rs  check_review_gate.rs  check_rule_ids.rs  check_stuck.rs  compute_review_scope.rs  create_feature.rs  create_plan_artifacts.rs  create_scenario.rs  dashboard.rs  derive_boundary.rs  diff_cross_spec.rs  discover_rule_files.rs  enforce_manifest.rs  extract_archive.rs  fetch_archive.rs  gate_confirm.rs  lint_markdown.rs  mark_criterion.rs  mark_task.rs  merge_claude_md.rs  merge_managed_block.rs  merge_permissions.rs  migrate_session_file.rs  mod.rs  process_waivers.rs  prune_tasks.rs  read_spec.rs  read_tasks.rs  remove_inbox_item.rs  resolve_anchor.rs  resolve_feature.rs  resolve_references.rs  run_generator.rs  set_status.rs  substitute_templates.rs  traverse_deps.rs  (+3 more)
runtime/src/schema/: extensions.rs  mod.rs  paths.rs  primitives.rs  procedure.rs  protocol.rs  registry.rs  services.rs  status.rs
runtime/tests/: atomic_writes.rs  cross_service.rs  exec_subprocess.rs  mcp.rs  parity.rs  review_command.rs  specs_root_override.rs  walker.rs
runtime/tests/common/: mod.rs
runtime/tests/fixtures/analyze-basic/: .govern.session.toml  .govern.toml  stdin.jsonl
runtime/tests/fixtures/cross-service-basic/: .govern.toml
runtime/tests/fixtures/exec-auggie/: .govern.toml
runtime/tests/fixtures/exec-opencode/: .govern.session.toml  .govern.toml
runtime/tests/fixtures/govern-basic/: .govern.session.toml  stdin.jsonl
runtime/tests/fixtures/implement-basic/: .govern.session.toml  stdin.jsonl
runtime/tests/fixtures/plan-basic/: .govern.session.toml  stdin.jsonl
runtime/tests/fixtures/review-basic/: .govern.session.toml  stdin.jsonl
runtime/tests/fixtures/specify-basic/: .govern.session.toml  stdin.jsonl
runtime/tests/fixtures/status-basic/: .govern.session.toml  .govern.toml
runtime/tests/fixtures/target-basic/: .govern.session.toml
runtime/tests/golden/: analyze-basic.jsonl  cross-service-basic.jsonl  govern-basic.jsonl  implement-basic.jsonl  plan-basic.jsonl  review-basic.jsonl  specify-basic.jsonl  status-basic.jsonl  target-basic.jsonl  validate-basic.jsonl
(+549 files in other folders)
