[package]
name = "gvrn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Deterministic runtime for the govern pipeline (spec 022)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stonean/govern"
readme = "../README.md"

[[bin]]
name = "gvrn"
path = "src/main.rs"

[lib]
name = "gvrn"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
pulldown-cmark = "0.13"
regex = "1"
rmcp = { version = "0.8", features = ["server", "client", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "signal", "macros"] }
walkdir = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
