[package]
name = "gvrn"
version = "0.14.0"
edition = "2024"
rust-version = "1.88"
description = "Deterministic runtime for the govern pipeline (spec 022)."
license = "MIT"
repository = "https://github.com/stonean/govern"
readme = "README.md"
exclude = [
  "tests/**",
  "bacon.toml",
  "legacy-prose-commands.txt",
]

[[bin]]
name = "gvrn"
path = "src/main.rs"

[lib]
name = "gvrn"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
rmcp = { version = "1", features = ["server", "client", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_norway = "0.9"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
thiserror = "2"
toml = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "signal", "macros"] }
walkdir = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
